// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type Badge struct {
	ID             int32            `json:"id"`
	Name           string           `json:"name"`
	Description    pgtype.Text      `json:"description"`
	Icon           pgtype.Text      `json:"icon"`
	Category       string           `json:"category"`
	Rarity         pgtype.Text      `json:"rarity"`
	ConditionType  string           `json:"condition_type"`
	ConditionValue []byte           `json:"condition_value"`
	CreatedAt      pgtype.Timestamp `json:"created_at"`
}

type Category struct {
	ID          int32            `json:"id"`
	Name        string           `json:"name"`
	Slug        string           `json:"slug"`
	Description pgtype.Text      `json:"description"`
	Icon        pgtype.Text      `json:"icon"`
	SortOrder   pgtype.Int4      `json:"sort_order"`
	CreatedAt   pgtype.Timestamp `json:"created_at"`
	UpdatedAt   pgtype.Timestamp `json:"updated_at"`
}

type Comment struct {
	ID              int32            `json:"id"`
	PredictionID    pgtype.Int4      `json:"prediction_id"`
	UserID          pgtype.Int4      `json:"user_id"`
	ParentCommentID pgtype.Int4      `json:"parent_comment_id"`
	CommentType     string           `json:"comment_type"`
	Content         string           `json:"content"`
	IsDeleted       pgtype.Bool      `json:"is_deleted"`
	CreatedAt       pgtype.Timestamp `json:"created_at"`
	UpdatedAt       pgtype.Timestamp `json:"updated_at"`
}

type CommentReaction struct {
	ID        int32            `json:"id"`
	CommentID pgtype.Int4      `json:"comment_id"`
	UserID    pgtype.Int4      `json:"user_id"`
	CreatedAt pgtype.Timestamp `json:"created_at"`
}

type Follow struct {
	ID          int32            `json:"id"`
	FollowerID  pgtype.Int4      `json:"follower_id"`
	FollowingID pgtype.Int4      `json:"following_id"`
	CreatedAt   pgtype.Timestamp `json:"created_at"`
}

type Notification struct {
	ID         int32            `json:"id"`
	UserID     pgtype.Int4      `json:"user_id"`
	Type       string           `json:"type"`
	TargetType pgtype.Text      `json:"target_type"`
	TargetID   pgtype.Int4      `json:"target_id"`
	ActorID    pgtype.Int4      `json:"actor_id"`
	IsRead     pgtype.Bool      `json:"is_read"`
	CreatedAt  pgtype.Timestamp `json:"created_at"`
}

type Prediction struct {
	ID                         int32            `json:"id"`
	UserID                     pgtype.Int4      `json:"user_id"`
	QuestionID                 pgtype.Int4      `json:"question_id"`
	Answer                     int32            `json:"answer"`
	Reason                     pgtype.Text      `json:"reason"`
	IsIntuition                bool             `json:"is_intuition"`
	IsCorrect                  pgtype.Bool      `json:"is_correct"`
	PredictOrder               int32            `json:"predict_order"`
	ChoiceDistributionSnapshot []byte           `json:"choice_distribution_snapshot"`
	ModificationCount          pgtype.Int4      `json:"modification_count"`
	IsModified                 pgtype.Bool      `json:"is_modified"`
	WeightedScore              pgtype.Float8    `json:"weighted_score"`
	CreatedAt                  pgtype.Timestamp `json:"created_at"`
	UpdatedAt                  pgtype.Timestamp `json:"updated_at"`
	JudgedAt                   pgtype.Timestamp `json:"judged_at"`
}

type PredictionChange struct {
	ID             int32            `json:"id"`
	PredictionID   pgtype.Int4      `json:"prediction_id"`
	OldAnswer      int32            `json:"old_answer"`
	NewAnswer      int32            `json:"new_answer"`
	OldIsIntuition pgtype.Bool      `json:"old_is_intuition"`
	NewIsIntuition pgtype.Bool      `json:"new_is_intuition"`
	ChangedAt      pgtype.Timestamp `json:"changed_at"`
}

type PredictionReaction struct {
	ID           int32            `json:"id"`
	PredictionID pgtype.Int4      `json:"prediction_id"`
	UserID       pgtype.Int4      `json:"user_id"`
	Stance       pgtype.Text      `json:"stance"`
	IsHelpful    pgtype.Bool      `json:"is_helpful"`
	CreatedAt    pgtype.Timestamp `json:"created_at"`
	UpdatedAt    pgtype.Timestamp `json:"updated_at"`
}

type Question struct {
	ID               int32            `json:"id"`
	AuthorID         pgtype.Int4      `json:"author_id"`
	CategoryID       pgtype.Int4      `json:"category_id"`
	Title            string           `json:"title"`
	Description      pgtype.Text      `json:"description"`
	Choices          []byte           `json:"choices"`
	ChoiceCount      int32            `json:"choice_count"`
	DeadlineAt       pgtype.Timestamp `json:"deadline_at"`
	Result           pgtype.Int4      `json:"result"`
	CorrectRate      pgtype.Float8    `json:"correct_rate"`
	DifficultyWeight pgtype.Float8    `json:"difficulty_weight"`
	Status           pgtype.Text      `json:"status"`
	ViewCount        pgtype.Int4      `json:"view_count"`
	JudgedAt         pgtype.Timestamp `json:"judged_at"`
	CreatedAt        pgtype.Timestamp `json:"created_at"`
	UpdatedAt        pgtype.Timestamp `json:"updated_at"`
}

type QuestionStat struct {
	QuestionID         int32            `json:"question_id"`
	TotalViews         pgtype.Int4      `json:"total_views"`
	TotalPredictions   pgtype.Int4      `json:"total_predictions"`
	TotalCorrect       pgtype.Int4      `json:"total_correct"`
	TotalModified      pgtype.Int4      `json:"total_modified"`
	HourlyViews        []byte           `json:"hourly_views"`
	HourlyPredictions  []byte           `json:"hourly_predictions"`
	ChoiceDistribution []byte           `json:"choice_distribution"`
	UpdatedAt          pgtype.Timestamp `json:"updated_at"`
}

type QuestionView struct {
	ID         int32            `json:"id"`
	QuestionID pgtype.Int4      `json:"question_id"`
	UserID     pgtype.Int4      `json:"user_id"`
	SessionID  pgtype.Text      `json:"session_id"`
	ViewedAt   pgtype.Timestamp `json:"viewed_at"`
}

type Report struct {
	ID          int32            `json:"id"`
	ReporterID  pgtype.Int4      `json:"reporter_id"`
	TargetType  string           `json:"target_type"`
	TargetID    int32            `json:"target_id"`
	Reason      string           `json:"reason"`
	Description pgtype.Text      `json:"description"`
	Status      pgtype.Text      `json:"status"`
	ResolvedAt  pgtype.Timestamp `json:"resolved_at"`
	CreatedAt   pgtype.Timestamp `json:"created_at"`
}

type User struct {
	ID           int32            `json:"id"`
	Email        string           `json:"email"`
	Username     string           `json:"username"`
	DisplayName  string           `json:"display_name"`
	AvatarUrl    pgtype.Text      `json:"avatar_url"`
	Bio          pgtype.Text      `json:"bio"`
	PasswordHash string           `json:"password_hash"`
	IsVerified   pgtype.Bool      `json:"is_verified"`
	CreatedAt    pgtype.Timestamp `json:"created_at"`
	UpdatedAt    pgtype.Timestamp `json:"updated_at"`
	XID          pgtype.Text      `json:"x_id"`
	XUsername    pgtype.Text      `json:"x_username"`
	XVerified    pgtype.Bool      `json:"x_verified"`
	XLinkedAt    pgtype.Timestamp `json:"x_linked_at"`
}

type UserBadge struct {
	ID          int32            `json:"id"`
	UserID      pgtype.Int4      `json:"user_id"`
	BadgeID     pgtype.Int4      `json:"badge_id"`
	IsDisplayed pgtype.Bool      `json:"is_displayed"`
	AcquiredAt  pgtype.Timestamp `json:"acquired_at"`
}

type UserBlock struct {
	ID            int32            `json:"id"`
	UserID        pgtype.Int4      `json:"user_id"`
	BlockedUserID pgtype.Int4      `json:"blocked_user_id"`
	CreatedAt     pgtype.Timestamp `json:"created_at"`
}

type UserBookmark struct {
	ID         int32            `json:"id"`
	UserID     pgtype.Int4      `json:"user_id"`
	QuestionID pgtype.Int4      `json:"question_id"`
	CreatedAt  pgtype.Timestamp `json:"created_at"`
}

type UserMute struct {
	ID          int32            `json:"id"`
	UserID      pgtype.Int4      `json:"user_id"`
	MutedUserID pgtype.Int4      `json:"muted_user_id"`
	CreatedAt   pgtype.Timestamp `json:"created_at"`
}

type UserNotificationSetting struct {
	UserID         int32            `json:"user_id"`
	NotifyResult   pgtype.Bool      `json:"notify_result"`
	NotifyReaction pgtype.Bool      `json:"notify_reaction"`
	NotifyComment  pgtype.Bool      `json:"notify_comment"`
	NotifyFollow   pgtype.Bool      `json:"notify_follow"`
	NotifyDeadline pgtype.Bool      `json:"notify_deadline"`
	EmailEnabled   pgtype.Bool      `json:"email_enabled"`
	CreatedAt      pgtype.Timestamp `json:"created_at"`
	UpdatedAt      pgtype.Timestamp `json:"updated_at"`
}

type UserPinnedPrediction struct {
	ID           int32            `json:"id"`
	UserID       pgtype.Int4      `json:"user_id"`
	PredictionID pgtype.Int4      `json:"prediction_id"`
	Title        string           `json:"title"`
	SortOrder    pgtype.Int4      `json:"sort_order"`
	CreatedAt    pgtype.Timestamp `json:"created_at"`
}

type UserProfile struct {
	UserID     int32            `json:"user_id"`
	AgeGroup   pgtype.Text      `json:"age_group"`
	Gender     pgtype.Text      `json:"gender"`
	Region     pgtype.Text      `json:"region"`
	Occupation pgtype.Text      `json:"occupation"`
	Interests  []byte           `json:"interests"`
	CreatedAt  pgtype.Timestamp `json:"created_at"`
	UpdatedAt  pgtype.Timestamp `json:"updated_at"`
}

type UserViewHistory struct {
	ID            int32            `json:"id"`
	UserID        pgtype.Int4      `json:"user_id"`
	QuestionID    pgtype.Int4      `json:"question_id"`
	ViewCount     pgtype.Int4      `json:"view_count"`
	FirstViewedAt pgtype.Timestamp `json:"first_viewed_at"`
	LastViewedAt  pgtype.Timestamp `json:"last_viewed_at"`
	IsDeleted     pgtype.Bool      `json:"is_deleted"`
}
