// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id serial [pk]
  email varchar [unique, not null]
  username varchar [unique, not null]
  display_name varchar [not null]
  avatar_url varchar
  bio text
  password_hash varchar [not null]
  is_verified boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
  x_id varchar
  x_username varchar
  x_verified boolean [default: false]
  x_linked_at timestamp
}

Table user_profiles {
  user_id int [pk, ref: > users.id]
  age_group varchar
  gender varchar
  region varchar
  occupation varchar
  interests jsonb
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table categories {
  id serial [pk]
  name varchar [unique, not null]
  slug varchar [unique, not null]
  description text
  icon varchar
  sort_order int [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table questions {
  id serial [pk]
  author_id int [ref: > users.id]
  category_id int [ref: > categories.id]
  title varchar [not null]
  description text
  choices jsonb [not null]
  choice_count int [not null]
  deadline_at timestamp [not null]
  result int
  correct_rate float
  difficulty_weight float [default: 1.0]
  status varchar [default: 'open']
  view_count int [default: 0]
  judged_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table predictions {
  id serial [pk]
  user_id int [ref: > users.id]
  question_id int [ref: > questions.id]
  answer int [not null]
  reason text
  is_intuition boolean [not null]
  is_correct boolean
  predict_order int [not null]
  choice_distribution_snapshot jsonb
  modification_count int [default: 0]
  is_modified boolean [default: false]
  weighted_score float
  created_at timestamp [default: `now()`]
  updated_at timestamp
  judged_at timestamp

  indexes {
    (user_id, question_id) [unique]
  }
}

Table question_views {
  id serial [pk]
  question_id int [ref: > questions.id]
  user_id int [ref: > users.id]
  session_id varchar
  viewed_at timestamp [default: `now()`]
}

Table question_stats {
  question_id int [pk, ref: > questions.id]
  total_views int [default: 0]
  total_predictions int [default: 0]
  total_correct int [default: 0]
  total_modified int [default: 0]
  hourly_views jsonb
  hourly_predictions jsonb
  choice_distribution jsonb
  updated_at timestamp
}

Table user_view_history {
  id serial [pk]
  user_id int [ref: > users.id]
  question_id int [ref: > questions.id]
  view_count int [default: 1]
  first_viewed_at timestamp [default: `now()`]
  last_viewed_at timestamp [default: `now()`]
  is_deleted boolean [default: false]

  indexes {
    (user_id, question_id) [unique]
  }
}

Table prediction_changes {
  id serial [pk]
  prediction_id int [ref: > predictions.id]
  old_answer int [not null]
  new_answer int [not null]
  old_is_intuition boolean
  new_is_intuition boolean
  changed_at timestamp [default: `now()`]
}

Table prediction_reactions {
  id serial [pk]
  prediction_id int [ref: > predictions.id]
  user_id int [ref: > users.id]
  stance varchar
  is_helpful boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp

  indexes {
    (prediction_id, user_id) [unique]
  }
}

Table comments {
  id serial [pk]
  prediction_id int [ref: > predictions.id]
  user_id int [ref: > users.id]
  parent_comment_id int [ref: > comments.id]
  comment_type varchar [not null]
  content text [not null]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table comment_reactions {
  id serial [pk]
  comment_id int [ref: > comments.id]
  user_id int [ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (comment_id, user_id) [unique]
  }
}

Table follows {
  id serial [pk]
  follower_id int [ref: > users.id]
  following_id int [ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (follower_id, following_id) [unique]
  }
}

Table notifications {
  id serial [pk]
  user_id int [ref: > users.id]
  type varchar [not null]
  target_type varchar
  target_id int
  actor_id int [ref: > users.id]
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table user_notification_settings {
  user_id int [pk, ref: > users.id]
  notify_result boolean [default: true]
  notify_reaction boolean [default: true]
  notify_comment boolean [default: true]
  notify_follow boolean [default: true]
  notify_deadline boolean [default: true]
  email_enabled boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table user_bookmarks {
  id serial [pk]
  user_id int [ref: > users.id]
  question_id int [ref: > questions.id]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, question_id) [unique]
  }
}

Table user_blocks {
  id serial [pk]
  user_id int [ref: > users.id]
  blocked_user_id int [ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, blocked_user_id) [unique]
  }
}

Table user_mutes {
  id serial [pk]
  user_id int [ref: > users.id]
  muted_user_id int [ref: > users.id]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, muted_user_id) [unique]
  }
}

Table reports {
  id serial [pk]
  reporter_id int [ref: > users.id]
  target_type varchar [not null]
  target_id int [not null]
  reason varchar [not null]
  description text
  status varchar [default: 'pending']
  resolved_at timestamp
  created_at timestamp [default: `now()`]
}

Table badges {
  id serial [pk]
  name varchar [unique, not null]
  description text
  icon varchar
  category varchar [not null]
  rarity varchar [default: 'common']
  condition_type varchar [not null]
  condition_value jsonb
  created_at timestamp [default: `now()`]
}

Table user_badges {
  id serial [pk]
  user_id int [ref: > users.id]
  badge_id int [ref: > badges.id]
  is_displayed boolean [default: false]
  acquired_at timestamp [default: `now()`]

  indexes {
    (user_id, badge_id) [unique]
  }
}

Table user_pinned_predictions {
  id serial [pk]
  user_id int [ref: > users.id]
  prediction_id int [ref: > predictions.id]
  title varchar [not null]
  sort_order int [default: 0]
  created_at timestamp [default: `now()`]

  indexes {
    (user_id, prediction_id) [unique]
  }
}
